<resources>
    <string name="app_name">MapleRubbishSeparator</string>
    <string name="cancel">cancel</string>
    <string name="agree">agree</string>
    <string name="permission_comfirm">permission comfirm</string>
    <string name="require_permission">require permission for better use</string>
    <string name="Reserved_Maple">All Reserved Maple</string>
    <string name="loading">loading...</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="notice">notice</string>
    <string name="login_account">turn to person page to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide">guide</string>
    <string name="map">map</string>
    <string name="shop">shop</string>
    <string name="person">person</string>
    <string name="touch_to_search">touch to search</string>
    <string name="pulltorefresh">pull to refresh</string>
    <string name="refreshing">refreshing</string>
    <string name="isloading">is loading</string>
    <string name="releasetorefresh">release to refresh</string>
    <string name="refreshfinish">refresh finish</string>
    <string name="refreshfail">refreshfail</string>
    <string name="getuserqrcode">get user\'s QRCode</string>
    <string name="withoutSdcard">without sdcard</string>
    <string name="choosePictureFromPhotos">choose picture from photos</string>
    <string name="choosePictureFromCamera">choose picture from camera</string>
    <string name="changeHead">change head</string>
    <string name="pleaselogin">please login</string>
    <string name="phonenumber">phonenumber:</string>
    <string name="inputphone">input phoneNumber</string>
    <string name="nextstep">next</string>
    <string name="check_sms">check sms</string>
    <string name="send_frequet">send too requent</string>
    <string name="message_error">code error</string>
    <string name="send_success">send success</string>
    <string name="exit_login">exit login</string>
    <string name="comfirm_logout">comfirm log out?</string>
    <string name="input_search">input rubbish name</string>
    <string name="history">history</string>
    <string name="electronic">electronic</string>
    <string name="shoes">shoes</string>
    <string name="clothes">clothes</string>
    <string name="books">book</string>
    <string name="makeup">makeup</string>
    <string name="gift">pakage</string>
    <string name="sports">sports</string>
    <string name="instrument">instrument</string>
    <string name="deletehistory">delete history</string>
    <string name="search_result">search result</string>
    <string name="touch_record">touch to record</string>
    <string name="release_get">release</string>
    <string name="left">left</string>
    <string name="time_min">should over 2s</string>
    <string name="start_compress">start conpress</string>
    <string name="compress_success">compress success</string>
    <string name="compress_fail">compress fail</string>
    <string name="serach_smartcan">smart can near by</string>
    <string name="detail">detail</string>
    <string name="nearby">near by</string>
    <string name="upload">upload order</string>
    <string name="delete">delete</string>
    <string name="input_order_title">input order title</string>
    <string name="input_order_price">input order price</string>
    <string name="input_order_des">input_order_des</string>
    <string name="at_least_one">at least one image</string>
    <string name="changename">change name</string>
    <string name="person_order">person_order</string>
    <string name="effient">finishorder</string>
    <string name="change_state">finish</string>
    <string name="inpur_name">input name</string>
    <string name="upload_name">upload</string>
    <string name="recycle">recycle</string>
    <string name="kitchen">kitchen</string>
    <string name="other">other</string>
    <string name="harm">harm</string>
    <string name="recycle_info">paper,iron,plastic,glass,cloth</string>
    <string name="harm_info">battery,light</string>
    <string name="kitchen_infp">left over,fruit,vegetable</string>
    <string name="other_info">food pakage,tissue,watery paper</string>
</resources>