<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/person_order_list_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/stringcolor_red"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/person_order_list_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:gravity="right"
                android:text=""
                android:textColor="@color/stringcolor_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/person_order_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="none"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:textColor="@color/stringcolor_black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/person_order_list_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/effient"
                android:textColor="@color/stringcolor_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/person_order_list_changestate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/small_corner_button_blue"
                    android:text="@string/change_state"
                    android:textColor="@color/stringcolor_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/person_order_list_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_corner_button_blue"
                    android:text="@string/detail"
                    android:textColor="@color/stringcolor_white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>