<?xml version="1.0" encoding="utf-8"?>
<com.maple.rubbishseparator.view.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/main_list" />

        <LinearLayout
            android:id="@+id/main_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/viewback_grey" />

            <com.maple.rubbishseparator.view.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_bottom_guide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_widthPercent="25%">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/mainpage"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/main_bottom_guide_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guide"
                        android:textColor="@color/stringcolor_grey"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_bottom_map"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_widthPercent="25%">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/map"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/main_bottom_map_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map"
                        android:textColor="@color/stringcolor_grey"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_bottom_shop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_widthPercent="25%">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/shop"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/main_bottom_shop_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop"
                        android:textColor="@color/stringcolor_grey"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_bottom_person"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_widthPercent="25%">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/person"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/main_bottom_person_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person"
                        android:textColor="@color/stringcolor_grey"
                        android:textSize="15sp" />
                </LinearLayout>

            </com.maple.rubbishseparator.view.PercentLinearLayout>
        </LinearLayout>
    </RelativeLayout>


</com.maple.rubbishseparator.view.PercentLinearLayout>